# odd-live

./: .gitignore  README.md
agentos/: .env.example  .gitignore  Dockerfile.api  Dockerfile.dashboard  Makefile  README.md  agentos_product_brief.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agentos/.github/workflows/: ci.yml
agentos/agentos/: __init__.py  __main__.py  celery_app.py
agentos/agentos-sdk/: README.md  pyproject.toml
agentos/agentos-sdk/src/agentos_sdk/: __init__.py  client.py  decorators.py  exceptions.py  models.py
agentos/agentos-sdk/tests/: test_client.py
agentos/agentos/config/: settings.py
agentos/agentos/runtime/: __init__.py  debate_runner.py  debate_schema.py  llm_step.py  policy_engine.py  reliability_card.py  replay_runner.py  run_events.py  run_helpers.py  system_mri.py  workflow_runner.py
agentos/agentos/server/: __main__.py  app.py  logging_config.py
agentos/agents/: greeter.yaml
agentos/dashboard/: .env.example  index.html  package-lock.json  package.json
agentos/dashboard/src/: App.tsx  index.css
agentos/dashboard/src/lib/: api.ts
agentos/dashboard/src/pages/: FailureInsightsPage.tsx  index.ts  (+4 more)
agentos/policies/: default.yaml
agentos/scripts/: seed_demo.py  seed_demo_data.py
agentos/tests/: test_debate.py  test_llm_step.py  test_policy_engine.py  test_run_helpers.py
agentos/workflows/: compliance_check.yaml  customer_support.yaml  customer_support_agent.yaml  data_pipeline_agent.yaml  debate_sample.yaml  financial_report.yaml  financial_report_agent.yaml  sample.yaml
(+4 files in other folders)
