[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentos-sdk"
version = "0.1.0"
description = "AI Agent Operating System — run, replay, govern your AI agents"
requires-python = ">=3.10"
dependencies = ["requests>=2.31,<3", "pyyaml>=6,<7", "pydantic>=2,<3"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
